fix auto style